# CloudShack

./: .appveyor.yml  .editorconfig  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  Gruntfile.js  README.md  app.js  bower.json  brunch-config.coffee  build  config.coffee  config.js.sample  config.json.sample  gulpfile.js  main.js  mix.exs  package.json  server.js  settings.json.sample
assets/: index.html
assets/partials/: logbook.html  newcontact.html  spinner.html
assets/templates/: cluster.html  editcontact.html  editprofile.html  export.html  home.html  import.html  logbook.html  newcontact.html  settings.html  showcontact.html
config/: config.exs  dev.exs  prod.exs
controllers/: callbook.js  cluster.js  config.js  contacts.js  data.js  dxcc.js  fldigi.js  keyer.js  profiles.js  rig.js  wsjtx.js
lib/: adi.js  adif.js  api.ex  cloudshack.ex  cluster.ex  cluster.js  config.ex  config.js  data.ex  data.js  database.js  default-config.json  dxcc.js  fldigi.js  hamqth.js  log.js  lotw.js  rigctl.js  router.ex  services.ex  state.ex  websocket.ex  winkeyer.js  wsjt.ex
lib/adif/: Cargo.toml  field.ex  generate.ex  parse.ex
lib/adif/src/: contact.rs  data.rs  field.rs  lib.rs  value.rs
lib/adif/src/adi/: generator.rs  mod.rs  parser.rs
lib/callbook/: Cargo.toml  hamqth.ex
lib/context/: Cargo.toml
lib/controller/: callbook.ex  config.ex  contacts.ex  data.ex  dxcc.ex  flag.ex  profiles.ex
lib/controllers/: callbook.ex  contacts.ex  flag.ex
lib/couchdb/: Cargo.toml
lib/dxcc/: Cargo.toml
lib/dxcluster/: Cargo.toml
lib/models/: contact.ex
lib/plug/: api.ex
lib/rigctl/: Cargo.toml
lib/services/: cluster.ex  database.ex  dxcc.ex  rigctl.ex  rotctl.ex  socket.ex  state.ex  wsjt.ex
lib/wsjt/: Cargo.toml
priv/: logbook.json
rel/: config.exs
routes/: callbook.js  contacts.js  dxcc.js  profiles.js
src/: config.rs  config.toml.default  database.rs  main.rs  websocket.rs
src/controllers/: contacts.rs  dxcc.rs  flag.rs  helper.rs  (+2 more)
test/: adif.js  cloudshack_test.exs  config.js  contacts.js  data.js  dxcc.js  dxcc_test.exs  fldigi.js
tests/: adif.rs  dxcc.rs
tools/: package.sh
webapp/: .eslintrc.js  .gitignore  app.js  app.less  bower.json  gulpfile.js  index.html  package-lock.json  package.json  postcss.config.js  routes.js  system.conf.js  tsconfig.json  tsd.json  typings.json  webpack.config.js
(+199 files in other folders)
