[package]
name = "cloudshack"
version = "0.5.0"
authors = ["Thomas Gatzweiler <mail@thomasgatzweiler.com>"]

[dependencies]
iron = "*"
plugin = "*"
router = "*"
staticfile = "*"
mount = "*"
urlencoded = "*"
bodyparser = "*"
persistent = "*"
toml = "*"
rustc-serialize = "*"
log = "~0.3.0"
env_logger = "~0.3.0"
chrono = "~0.2.0"

[dependencies.couchdb]
path = "lib/couchdb"

[dependencies.adif]
path = "lib/adif"

[dependencies.dxcc]
path = "lib/dxcc"

[dependencies.dxcluster]
path = "lib/dxcluster"

[dependencies.wsjt]
path = "lib/wsjt"
