[package]
name = "adif"
version = "0.1.0"
authors = ["Thomas Gatzweiler <mail@thomasgatzweiler.com>"]

[dependencies]
nom = "~0.5.0"
chrono = "~0.2.0"
rustc-serialize = "~0.3.16"

[dependencies.phf]
git = "https://github.com/7h0ma5/rust-phf.git"

[dependencies.phf_macros]
git = "https://github.com/7h0ma5/rust-phf.git"
